syntax = "proto3";
package eosapi;

message EosTxInput {
    repeated EosSignData sign_datas = 1;
}

message EosSignData {
    string tx_data = 1;
    repeated string pub_keys = 2;
    string chain_id = 3;
    string receiver = 4;
    string payment = 5;
}

message EosTxOutput {
    repeated EosSignResult trans_multi_signs = 1;
}

message EosSignResult {
    string hash = 1;
    repeated string signs = 2;
}


message EosMessageSignParam {
    string path = 1;
    string data = 2;
    bool is_hex = 3;
    string pubkey = 4;
}

message EosMessageSignResult {
    string signature = 1;
}